hswm-bindings/include/river-window-management-v1-client-protocol.h

/**
 * @page page_river_window_management_v1 The river_window_management_v1 protocol
 * frame-perfect window management
 *
 * @section page_desc_river_window_management_v1 Description
 *
 * This protocol allows a single "window manager" client to determine the
 * window management policy of the compositor. State is globally
 * double-buffered allowing for frame perfect state changes involving multiple
 * windows.
 *
 * The key words "must", "must not", "required", "shall", "shall not",
 * "should", "should not", "recommended", "may", and "optional" in this
 * document are to be interpreted as described in IETF RFC 2119.
 *
 * @section page_ifaces_river_window_management_v1 Interfaces
 * - @subpage page_iface_river_window_manager_v1 - window manager global interface
 * - @subpage page_iface_river_window_v1 - a logical window
 * - @subpage page_iface_river_decoration_v1 - a window decoration
 * - @subpage page_iface_river_shell_surface_v1 - a surface for window manager UI
 * - @subpage page_iface_river_node_v1 - a node in the render list
 * - @subpage page_iface_river_output_v1 - a logical output
 * - @subpage page_iface_river_seat_v1 - a window management seat
 * - @subpage page_iface_river_pointer_binding_v1 - configure a pointer binding, receive trigger events
 * @section page_copyright_river_window_management_v1 Copyright
 * <pre>
 *
 * SPDX-FileCopyrightText: © 2024 Isaac Freund
 * SPDX-License-Identifier: MIT
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to
 * deal in the Software without restriction, including without limitation the
 * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 * IN THE SOFTWARE.
 * </pre>
 */
struct river_decoration_v1;
struct river_node_v1;
struct river_output_v1;
struct river_pointer_binding_v1;
struct river_seat_v1;
struct river_shell_surface_v1;
struct river_window_manager_v1;
struct river_window_v1;
/**
 * @page page_iface_river_window_manager_v1 river_window_manager_v1
 * @section page_iface_river_window_manager_v1_desc Description
 *
 * This global interface should only be advertised to the window manager
 * process. Only one window management client may be active at a time. The
 * compositor should use the unavailable event if necessary to enforce this.
 *
 * There are two disjoint categories of state managed by this protocol:
 *
 * Window management state influences the communication between the server
 * and individual window clients (e.g. xdg_toplevels). Window management
 * state includes window dimensions, fullscreen state, keyboard focus,
 * keyboard bindings, and more.
 *
 * Rendering state only affects the rendered output of the compositor and
 * does not influence communication between the server and individual window
 * clients. Rendering state includes the position and rendering order of
 * windows, shell surfaces, decoration surfaces, borders, and more.
 *
 * Window management state may only be modified by the window manager as part
 * of a manage sequence. A manage sequence is started with the manage_start
 * event and ended with the manage_finish request. It is a protocol error to
 * modify window management state outside of a manage sequence.
 *
 * A manage sequence is always followed by at least one render sequence. A
 * render sequence is started with the render_start event and ended with the
 * render_finish request.
 *
 * Rendering state may be modified by the window manager during a manage
 * sequence or a render sequence. Regardless of when the rendering state is
 * modified, it is applied with the next render_finish request. It is a
 * protocol error to modify rendering state outside of a manage or render
 * sequence.
 *
 * The server will start a manage sequence by sending new state and the
 * manage_start event as soon as possible whenever there is a change in state
 * that must be communicated with the window manager.
 *
 * If the window manager client needs to ensure a manage sequence is started
 * due to a state change the compositor is not aware of, it may send the
 * manage_dirty request.
 *
 * The server will start a render sequence by sending new state and the
 * render_start event as soon as possible whenever there is a change in
 * window dimensions that must be communicated with the window manager.
 * Multiple render sequences may be made consecutively without a manage
 * sequence in between, for example if a window independently changes its own
 * dimensions.
 *
 * To summarize, the main loop of this protocol is as follows:
 *
 * 1. The server sends events indicating all changes since the last
 * manage sequence followed by the manage_start event.
 *
 * 2. The client sends requests modifying window management state or
 * rendering state (as defined above) followed by the manage_finish
 * request.
 *
 * 3. The server sends new state to windows and waits for responses.
 *
 * 4. The server sends new window dimensions to the client followed by the
 * render_start event.
 *
 * 5. The client sends requests modifying rendering state (as defined above)
 * followed by the render_finish request.
 *
 * 6. If window dimensions change, loop back to step 4.
 * If state that requires a manage sequence changes or if the client makes
 * a manage_dirty request, loop back to step 1.
 *
 * For the purposes of frame perfection, the server may delay rendering new
 * state committed by the windows in step 3 until after step 5 is finished.
 *
 * It is a protocol error for the client to make a manage_finish or
 * render_finish request that violates this ordering.
 * @section page_iface_river_window_manager_v1_api API
 * See @ref iface_river_window_manager_v1.
 */
/**
 * @defgroup iface_river_window_manager_v1 The river_window_manager_v1 interface
 *
 * This global interface should only be advertised to the window manager
 * process. Only one window management client may be active at a time. The
 * compositor should use the unavailable event if necessary to enforce this.
 *
 * There are two disjoint categories of state managed by this protocol:
 *
 * Window management state influences the communication between the server
 * and individual window clients (e.g. xdg_toplevels). Window management
 * state includes window dimensions, fullscreen state, keyboard focus,
 * keyboard bindings, and more.
 *
 * Rendering state only affects the rendered output of the compositor and
 * does not influence communication between the server and individual window
 * clients. Rendering state includes the position and rendering order of
 * windows, shell surfaces, decoration surfaces, borders, and more.
 *
 * Window management state may only be modified by the window manager as part
 * of a manage sequence. A manage sequence is started with the manage_start
 * event and ended with the manage_finish request. It is a protocol error to
 * modify window management state outside of a manage sequence.
 *
 * A manage sequence is always followed by at least one render sequence. A
 * render sequence is started with the render_start event and ended with the
 * render_finish request.
 *
 * Rendering state may be modified by the window manager during a manage
 * sequence or a render sequence. Regardless of when the rendering state is
 * modified, it is applied with the next render_finish request. It is a
 * protocol error to modify rendering state outside of a manage or render
 * sequence.
 *
 * The server will start a manage sequence by sending new state and the
 * manage_start event as soon as possible whenever there is a change in state
 * that must be communicated with the window manager.
 *
 * If the window manager client needs to ensure a manage sequence is started
 * due to a state change the compositor is not aware of, it may send the
 * manage_dirty request.
 *
 * The server will start a render sequence by sending new state and the
 * render_start event as soon as possible whenever there is a change in
 * window dimensions that must be communicated with the window manager.
 * Multiple render sequences may be made consecutively without a manage
 * sequence in between, for example if a window independently changes its own
 * dimensions.
 *
 * To summarize, the main loop of this protocol is as follows:
 *
 * 1. The server sends events indicating all changes since the last
 * manage sequence followed by the manage_start event.
 *
 * 2. The client sends requests modifying window management state or
 * rendering state (as defined above) followed by the manage_finish
 * request.
 *
 * 3. The server sends new state to windows and waits for responses.
 *
 * 4. The server sends new window dimensions to the client followed by the
 * render_start event.
 *
 * 5. The client sends requests modifying rendering state (as defined above)
 * followed by the render_finish request.
 *
 * 6. If window dimensions change, loop back to step 4.
 * If state that requires a manage sequence changes or if the client makes
 * a manage_dirty request, loop back to step 1.
 *
 * For the purposes of frame perfection, the server may delay rendering new
 * state committed by the windows in step 3 until after step 5 is finished.
 *
 * It is a protocol error for the client to make a manage_finish or
 * render_finish request that violates this ordering.
 */
extern const struct wl_interface river_window_manager_v1_interface;
/**
 * @page page_iface_river_window_v1 river_window_v1
 * @section page_iface_river_window_v1_desc Description
 *
 * This represents a logical window. For example, a window may correspond to
 * an xdg_toplevel or Xwayland window.
 *
 * A newly created window will not be displayed until the window manager
 * makes a propose_dimensions or fullscreen request as part of a manage
 * sequence, the server replies with a dimensions event as part of a render
 * sequence, and that render sequence is finished.
 * @section page_iface_river_window_v1_api API
 * See @ref iface_river_window_v1.
 */
/**
 * @defgroup iface_river_window_v1 The river_window_v1 interface
 *
 * This represents a logical window. For example, a window may correspond to
 * an xdg_toplevel or Xwayland window.
 *
 * A newly created window will not be displayed until the window manager
 * makes a propose_dimensions or fullscreen request as part of a manage
 * sequence, the server replies with a dimensions event as part of a render
 * sequence, and that render sequence is finished.
 */
extern const struct wl_interface river_window_v1_interface;
/**
 * @page page_iface_river_decoration_v1 river_decoration_v1
 * @section page_iface_river_decoration_v1_desc Description
 *
 * The rendering order of windows with decorations is follows:
 *
 * 1. Decorations created with get_decoration_below at the bottom
 * 2. Window content
 * 3. Borders configured with river_window_v1.set_borders
 * 4. Decorations created with get_decoration_above at the top
 *
 * The relative ordering of decoration surfaces above/below a window is
 * undefined by this protocol and left up to the compositor.
 * @section page_iface_river_decoration_v1_api API
 * See @ref iface_river_decoration_v1.
 */
/**
 * @defgroup iface_river_decoration_v1 The river_decoration_v1 interface
 *
 * The rendering order of windows with decorations is follows:
 *
 * 1. Decorations created with get_decoration_below at the bottom
 * 2. Window content
 * 3. Borders configured with river_window_v1.set_borders
 * 4. Decorations created with get_decoration_above at the top
 *
 * The relative ordering of decoration surfaces above/below a window is
 * undefined by this protocol and left up to the compositor.
 */
extern const struct wl_interface river_decoration_v1_interface;
/**
 * @page page_iface_river_shell_surface_v1 river_shell_surface_v1
 * @section page_iface_river_shell_surface_v1_desc Description
 *
 * The window manager might use a shell surface to display a status bar,
 * background image, desktop notifications, launcher, desktop menu, or
 * whatever else it wants.
 * @section page_iface_river_shell_surface_v1_api API
 * See @ref iface_river_shell_surface_v1.
 */
/**
 * @defgroup iface_river_shell_surface_v1 The river_shell_surface_v1 interface
 *
 * The window manager might use a shell surface to display a status bar,
 * background image, desktop notifications, launcher, desktop menu, or
 * whatever else it wants.
 */
extern const struct wl_interface river_shell_surface_v1_interface;
/**
 * @page page_iface_river_node_v1 river_node_v1
 * @section page_iface_river_node_v1_desc Description
 *
 * The render list is a list of nodes that determines the rendering order of
 * the compositor. Nodes may correspond to windows or shell surfaces. The
 * relative ordering of nodes may be changed with the place_above and
 * place_below requests, changing the rendering order.
 *
 * The initial position of a node in the render list is undefined, the window
 * manager client must use the place_above or place_below request to
 * guarantee a specific rendering order.
 * @section page_iface_river_node_v1_api API
 * See @ref iface_river_node_v1.
 */
/**
 * @defgroup iface_river_node_v1 The river_node_v1 interface
 *
 * The render list is a list of nodes that determines the rendering order of
 * the compositor. Nodes may correspond to windows or shell surfaces. The
 * relative ordering of nodes may be changed with the place_above and
 * place_below requests, changing the rendering order.
 *
 * The initial position of a node in the render list is undefined, the window
 * manager client must use the place_above or place_below request to
 * guarantee a specific rendering order.
 */
extern const struct wl_interface river_node_v1_interface;
/**
 * @page page_iface_river_output_v1 river_output_v1
 * @section page_iface_river_output_v1_desc Description
 *
 * An area in the compositor's logical coordinate space that should be
 * treated as a single output for window management purposes. This area may
 * correspond to a single physical output or multiple physical outputs in the
 * case of mirroring or tiled monitors depending on the hardware and
 * compositor configuration.
 * @section page_iface_river_output_v1_api API
 * See @ref iface_river_output_v1.
 */
/**
 * @defgroup iface_river_output_v1 The river_output_v1 interface
 *
 * An area in the compositor's logical coordinate space that should be
 * treated as a single output for window management purposes. This area may
 * correspond to a single physical output or multiple physical outputs in the
 * case of mirroring or tiled monitors depending on the hardware and
 * compositor configuration.
 */
extern const struct wl_interface river_output_v1_interface;
/**
 * @page page_iface_river_seat_v1 river_seat_v1
 * @section page_iface_river_seat_v1_desc Description
 *
 * This object represents a single user's collection of input devices. It
 * allows the window manager to route keyboard input to windows, get
 * high-level information about pointer input, define pointer bindings, etc.
 *
 * For keyboard bindings, see the river-xkb-bindings-v1 protocol.
 *
 * Since version 4: The cursor surface/shape set by the window manager on the
 * wl_pointer of this seat is used when no client has pointer focus, for
 * example during a pointer operation. Since the window manager is allowed to
 * set cursor surface/shape even when it does not have pointer focus, the
 * compositor must ignore the serial argument of wl_pointer.set_cursor and
 * wp_cursor_shape_device_v1.set_shape requests made by the window manager.
 *
 * The most recent cursor surface/shape set by the window manager is
 * remembered by the compositor and restored whenever no client has pointer
 * focus. If the window manager never sets a cursor surface/shape, the
 * "default" shape is used.
 * @section page_iface_river_seat_v1_api API
 * See @ref iface_river_seat_v1.
 */
/**
 * @defgroup iface_river_seat_v1 The river_seat_v1 interface
 *
 * This object represents a single user's collection of input devices. It
 * allows the window manager to route keyboard input to windows, get
 * high-level information about pointer input, define pointer bindings, etc.
 *
 * For keyboard bindings, see the river-xkb-bindings-v1 protocol.
 *
 * Since version 4: The cursor surface/shape set by the window manager on the
 * wl_pointer of this seat is used when no client has pointer focus, for
 * example during a pointer operation. Since the window manager is allowed to
 * set cursor surface/shape even when it does not have pointer focus, the
 * compositor must ignore the serial argument of wl_pointer.set_cursor and
 * wp_cursor_shape_device_v1.set_shape requests made by the window manager.
 *
 * The most recent cursor surface/shape set by the window manager is
 * remembered by the compositor and restored whenever no client has pointer
 * focus. If the window manager never sets a cursor surface/shape, the
 * "default" shape is used.
 */
extern const struct wl_interface river_seat_v1_interface;
/**
 * @page page_iface_river_pointer_binding_v1 river_pointer_binding_v1
 * @section page_iface_river_pointer_binding_v1_desc Description
 *
 * This object allows the window manager to configure a pointer binding and
 * receive events when the binding is triggered.
 *
 * The new pointer binding is not enabled until the enable request is made
 * during a manage sequence.
 *
 * Normally, all pointer button events are sent to the surface with pointer
 * focus by the compositor. Pointer button events that trigger a pointer
 * binding are not sent to the surface with pointer focus.
 *
 * If multiple pointer bindings would be triggered by a single physical
 * pointer event on the compositor side, it is compositor policy which
 * pointer binding(s) will receive press/release events or if all of the
 * matched pointer bindings receive press/release events.
 * @section page_iface_river_pointer_binding_v1_api API
 * See @ref iface_river_pointer_binding_v1.
 */
/**
 * @defgroup iface_river_pointer_binding_v1 The river_pointer_binding_v1 interface
 *
 * This object allows the window manager to configure a pointer binding and
 * receive events when the binding is triggered.
 *
 * The new pointer binding is not enabled until the enable request is made
 * during a manage sequence.
 *
 * Normally, all pointer button events are sent to the surface with pointer
 * focus by the compositor. Pointer button events that trigger a pointer
 * binding are not sent to the surface with pointer focus.
 *
 * If multiple pointer bindings would be triggered by a single physical
 * pointer event on the compositor side, it is compositor policy which
 * pointer binding(s) will receive press/release events or if all of the
 * matched pointer bindings receive press/release events.
 */
extern const struct wl_interface river_pointer_binding_v1_interface;